--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -40,9 +40,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
-            <li class="nav-item"><a class="nav-link" href="/messages">消息</a></li>
-	    <li class="nav-item"><a class="nav-link" href="/user">主页</a></li>
+            <li class="nav-item"><a class="nav-link" href="/store">{{ i18n!(self.i18n.catalog, "Store") }}</a></li>
+            <li class="nav-item"><a class="nav-link" href="/messages">{{ i18n!(self.i18n.catalog, "Messages") }}</a></li>
+	    <li class="nav-item"><a class="nav-link" href="/user">{{ i18n!(self.i18n.catalog, "Portal") }}</a></li>
 	    {% block navbutton %}{% endblock navbutton %}
           </ul>
         </div>
