--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -1,10 +1,10 @@
 <table class="table" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
       <tr>
-	<th data-field="id" data-sortable="true" scope="col">ID</th>
-	<th data-field="name" data-sortable="true" scope="col">Product name</th>
-	<th data-field="category" data-sortable="true" scope="col">Category</th>
-	<th data-field="price" data-sortable="true" scope="col">Price</th>
+	<th data-field="id" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "ID") }}</th>
+	<th data-field="name" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "Product name") }}</th>
+	<th data-field="category" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "Category") }}</th>
+	<th data-field="price" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "Price") }}</th>
       </tr>
     </thead>
     <tbody>
