--- a/sails-bin/templates/store/prod_info_owned.html
+++ b/sails-bin/templates/store/prod_info_owned.html
@@ -1,19 +1,19 @@
 {% extends "prod_info_user.html" %}
 
 {% block seller %}
-<h1>联系方式</h1>
+<h1>{{ i18n!(self.i18n.catalog, "Contact information") }}</h1>
 <table class="table table-hover">
   <tbody>
     <tr>
-      <th scope="row">邮箱</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Email") }}</th>
       <td><a href="mailto:{{seller.get_id()}}">{{ seller.get_id() }}</a></td>
     </tr>
     <tr>
-      <th scope="row">名称</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Name") }}</th>
       <td><a href="{{ uri!("/user", crate::user::portal_guest(self.seller.get_id())) }}">{{seller.get_name()}}</a></td>
     </tr>
     <tr>
-      <th scope="row">学校</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Institution") }}</th>
       <td>{{ seller.get_school() }}</td>
     </tr>
   </tbody>
@@ -21,7 +21,7 @@
 {% endblock seller %}
 
 {% block actions %}
-<a href="{{ uri!("/store", crate::store::update_prod_page(self.prod.get_id())) }}" class="btn btn-primary" role="button">更新</a>
-<a href="{{ uri!("/store", crate::store::delete_prod(self.prod.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">删除</a>
-<a href="{{ uri!("/orders", crate::orders::checkout(self.prod.get_id())) }}" class="btn btn-primary" role="button"><i class="bi bi-credit-card"></i> 购买</a>
+<a href="{{ uri!("/store", crate::store::update_prod_page(self.prod.get_id())) }}" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Update") }}</a>
+<a href="{{ uri!("/store", crate::store::delete_prod(self.prod.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">{{ i18n!(self.i18n.catalog, "Delete") }}</a>
+<a href="{{ uri!("/orders", crate::orders::checkout(self.prod.get_id())) }}" class="btn btn-primary" role="button"><i class="bi bi-credit-card"></i> {{ i18n!(self.i18n.catalog, "Purchase") }}</a>
 {% endblock actions %}
