--- a/sails-bin/templates/digicons/trace.html
+++ b/sails-bin/templates/digicons/trace.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
-{% block title %}Digital Content Distribution Trace{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Digital Content Distribution Trace") }}{% endblock title %}
 
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>Trace of this copy of "{{ digicon.get_name() }}"</h1>
+    <h1>{{ i18n!(self.i18n.catalog, "Trace of this copy of \"{0}\""; self.digicon.get_name()) }}</h1>
     <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">Created at</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Created at") }}</th>
       <td>{{ time }}</td>
     </tr>
     <tr>
-      <th scope="row">Digicon</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Name") }}</th>
       <td><a href="{{ uri!("/digicons", crate::digicons::get(self.digicon.get_id())) }}">{{self.digicon.get_name()}}</a></td>
     </tr>
     <tr>
-      <th scope="row">Downloaded by</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Downloaded by") }}</th>
       <td><a href="{{ uri!("/user", crate::user::portal_guest(self.user.get_id())) }}">{{ self.user.get_name() }}</a></td>
     </tr>
     </tbody>
