--- a/sails-bin/templates/messages/chat.html
+++ b/sails-bin/templates/messages/chat.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Chat{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Chat") }}{% endblock title %}
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>和 {{receiver.get_id() }} 对话</h1>
+    <h1>{{ i18n!(self.i18n.catalog, "Chat with {0}"; self.receiver.get_id()) }}</h1>
     <br>
 
   {% if messages.len() > 0 %}
@@ -22,7 +22,7 @@
     </div>
   {% endfor %}
   {% else %}
-    <h3>您和 {{ receiver.get_id() }} 之间没有任何对话</h3>
+    <h3>{{ i18n!(self.i18n.catalog, "No chat with {0}"; self.receiver.get_id()) }}</h3>
   {% endif %}
 
   </div>
@@ -31,11 +31,11 @@
     <form action="{{ uri!("/messages", crate::messages::send(self.receiver.get_id())) }}" method="post">
       <div class="form-group row">
 	<div class="col-sm-10">
-	  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="body" placeholder="Type your message here"></textarea>
+	  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="body" placeholder="{{ i18n!(self.i18n.catalog, "Type your message here") }}"></textarea>
 	</div>
       </div>
       <br>
-      <button class="col-sm-10 btn btn-lg btn-primary" type="submit">发送</button>
+      <button class="col-sm-10 btn btn-lg btn-primary" type="submit">{{ i18n!(self.i18n.catalog, "Send") }}</button>
     </form>
   </div>
 </main>
