--- a/sails-bin/templates/orders/checkout.html
+++ b/sails-bin/templates/orders/checkout.html
@@ -1,25 +1,25 @@
 {% extends "base.html" %}
-{% block title %}提交订单{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Checkout") }}{% endblock title %}
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>请确认并提交订单</h1>
+    <h1>{{ i18n!(self.i18n.catalog, "Please review and submit your order") }}</h1>
     <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">ID</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "ID") }}</th>
       <td>{{ prod.get_shortid() }}</td>
     </tr>
     <tr>
-      <th scope="row">名称</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Name") }}</th>
       <td>{{ prod.get_prodname() }}</td>
     </tr>
     <tr>
-      <th scope="row">单价</th>
-      <td>CN¥ {{ prod.get_price() }}</td>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Price per unit") }}</th>
+      <td>{{ i18n!(self.i18n.catalog, "USD") }} {{ prod.get_price() }}</td>
     </tr>
     <tr>
-      <th scope="row">库存数量</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Quantity in stock") }}</th>
       <td>{{ prod.get_quantity() }}</td>
     </tr>
     </tbody>
@@ -27,24 +27,24 @@
 
     <form action="{{ uri!("/orders", crate::orders::purchase(self.prod.get_id())) }}" method="post">
     <div class="form-group row">
-      <label for="inputQuantity" class="col-sm-2 col-form-label">购买数量</label>
+      <label for="inputQuantity" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Quantity to purchase") }}</label>
       <!--<input type="number" min="1" max="{{prod.get_quantity()}}" class="form-control" id="inputQuantity" placeholder="Quantity" value="1" name="quantity" required>-->
       <input type="number" min="1" max="3" class="form-control" id="inputQuantity" placeholder="Quantity" value="1" name="quantity" required>
     </div>
     <br>
 
     <div class="form-group row">
-      <label for="inputAddress" class="col-sm-2 col-form-label">收货地址</label>
+      <label for="inputAddress" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Address") }}</label>
       {% match recent_address %}
       {% when Some with (addr) %}
-      <input type="text" class="form-control" id="inputAddress" name="address" value="{{addr}}" placeholder="如需在学校内收货，请填写您的班级" required>
+      <input type="text" class="form-control" id="inputAddress" name="address" value="{{addr}}" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}" required>
       {% when None %}
-      <input type="text" class="form-control" id="inputAddress" name="address" placeholder="如需在学校内收货，请填写您的班级" required>
+      <input type="text" class="form-control" id="inputAddress" name="address" placeholder="{{ i18n!(self.i18n.catalog, "If content is completely digital, you may leave it blank.") }}" required>
       {% endmatch %}
     </div>
     <br>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">提交订单</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ i18n!(self.i18n.catalog, "Submit") }}</button>
   </form>
   </div>
 </main>
