--- a/sails-bin/templates/orders/order_info_seller.html
+++ b/sails-bin/templates/orders/order_info_seller.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>您收到的订单 #{{ order.get_shortid() }} 的细节</h1>
+      <h1>{{ i18n!(self.i18n.catalog, "Details of order #{0}"; self.order.get_shortid()) }}</h1>
       <br>
       {% match order.get_transaction_status() %}
       {% when sails_db::enums::TransactionStatus::Refunded %}
@@ -11,32 +11,32 @@
 	<div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>订单已退款（已取消）</h3>
-      您不需要进行任何操作。
+      <h3>{{ i18n!(self.i18n.catalog, "Order has been refunded or canceled") }}</h3>
+      {{ i18n!(self.i18n.catalog, "No actions needed") }}
 
       {% when sails_db::enums::TransactionStatus::Placed %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%"></div>
       </div>
       <br>
-      <h3>成功下单</h3>
-      您不需要进行任何操作。
+      <h3>{{ i18n!(self.i18n.catalog, "Order placed") }}</h3>
+      {{ i18n!(self.i18n.catalog, "No actions needed") }}
 
       {% when sails_db::enums::TransactionStatus::Paid %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 66%"></div>
       </div>
       <br>
-      <h3>已成功付款</h3>
-      您不需要进行任何操作。
+      <h3>{{ i18n!(self.i18n.catalog, "Order paid") }}</h3>
+      {{ i18n!(self.i18n.catalog, "No actions needed") }}
 
       {% when sails_db::enums::TransactionStatus::Finished %}
       <div class="progress">
 	<div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>订单已成功交付</h2>
-      您不需要进行任何操作。
+      <h3>{{ i18n!(self.i18n.catalog, "Order completed") }}</h2>
+      {{ i18n!(self.i18n.catalog, "No actions needed") }}
       {% endmatch %}
     </div>
 <br>
@@ -44,35 +44,35 @@
     <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">总价</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Total") }}</th>
       <td>CN¥ {{ order.get_total() }}</td>
     </tr>
     <tr>
-      <th scope="row">单价</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Price per unit") }}</th>
       <td>CN¥ {{ order.get_price() }}</td>
     </tr>
     <tr>
-      <th scope="row">购买数量</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Quantity purchased") }}</th>
       <td>{{ order.get_quantity() }}</td>
     </tr>
     <tr>
-      <th scope="row">买家收货地址</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Address") }}</th>
       <td>{{ order.get_address() }}</td>
     </tr>
     <tr>
-      <th scope="row">卖家</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Seller") }}</th>
       <td>{{ prod.get_seller_id() }}</td>
     </tr>
     <tr>
-      <th scope="row">商品 ID</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Product ID") }}</th>
       <td><a href="{{ uri!("/store", crate::store::prod_page_owned(self.prod.get_id())) }}">{{ prod.get_shortid() }}</a></td>
     </tr>
     <tr>
-      <th scope="row">时间戳</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Timestamp") }}</th>
       <td>{{ order.get_time_sent() }}</td>
     </tr>
     <tr>
-      <th scope="row">状态</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Order Status") }}</th>
       <td>{{ "{:?}"|format(order.get_transaction_status()) }}</td>
     </tr>
     </tbody>
