--- a/sails-bin/templates/store/prod_info_guest.html
+++ b/sails-bin/templates/store/prod_info_guest.html
@@ -14,7 +14,7 @@
 	}
 </style>
 {% endblock head %}
-{% block title %}{{ prod.get_prodname() }} - 商品信息{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "{0} - Product details"; self.prod.get_prodname()) }}{% endblock title %}
 
 {% block content %}
 <main class="container">
@@ -27,37 +27,37 @@
     <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">ID</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "ID") }}</th>
       <td>{{ prod.get_shortid() }}</td>
     </tr>
     <tr>
-      <th scope="row">价格</th>
-      <td>CN¥ {{ prod.get_price() }}</td>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Price") }}</th>
+      <td>{{ i18n!(self.i18n.catalog, "USD") }} {{ prod.get_price() }}</td>
     </tr>
     <tr>
-      <th scope="row">库存数量</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Quantity in stock") }}</th>
       <td>{{ prod.get_quantity() }}</td>
     </tr>
     <tr>
-      <th scope="row">官方指导价</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Regular price") }}</th>
       	{% match category %}
 	{% when Some with (ctg) %}
-        <td>CN¥ {{ ctg.get_price() }}</td>
+        <td>{{ i18n!(self.i18n.catalog, "USD") }} {{ ctg.get_price() }}</td>
         {% when None %}
-	<td>不可用</td>
+	<td>{{ i18n!(self.i18n.catalog, "Unavailable") }}</td>
         {% endmatch %}
     </tr>
     <tr>
-      <th scope="row">种类</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Category") }}</th>
       	{% match category %}
 	{% when Some with (ctg) %}
         <td><a href="{{ uri!("/search", crate::search::categories(ctg.id())) }}">{{ ctg.name() }}</a></td>
         {% when None %}
-	<td>Not categorized</td>
+	<td>{{ i18n!(self.i18n.catalog, "Not categorized") }}</td>
         {% endmatch %}
     </tr>
     <tr>
-      <th scope="row">状态</th>
+      <th scope="row">{{ i18n!(self.i18n.catalog, "Status") }}</th>
       <td>{{ "{:?}"|format(prod.get_product_status()) }}</td>
     </tr>
     </tbody>
@@ -74,16 +74,16 @@
 
     <div class="p-5 rounded shadow">
     {% block seller %}
-    <h1>联系卖家</h1>
-    <a href="/user" class="btn btn-primary" role="button">登录以联系卖家</a>
+    <h1>{{ i18n!(self.i18n.catalog, "Contact the creator") }}</h1>
+    <a href="/user" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Sign in to contact the creator") }}</a>
     {% endblock seller %}
     </div>
     <br>
 
     <div class="p-5 rounded shadow">
       {% block seller_desc %}
-          <h1>卖家基本信息</h1>
-	  <a href="/user" class="btn btn-primary" role="button">登录以查看卖家信息</a>
+          <h1>{{ i18n!(self.i18n.catalog, "Creator's information") }}</h1>
+	  <a href="/user" class="btn btn-primary" role="button">{{ i18n!(self.i18n.catalog, "Sign in to view creator's information") }}</a>
       {% endblock seller_desc %}
     </div>
     <br>
