--- a/sails-bin/templates/store/update_prod.html
+++ b/sails-bin/templates/store/update_prod.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
-{% block title %}更新 {{ prod.get_prodname() }}{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Update {0}"; self.prod.get_prodname()) }}{% endblock title %}
 {% block content %}
   <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>更新商品信息</h1>
-    <p class="lead">在这里您可以修改商品的相关信息，买家会在商店里看到您对商品的描述</p>
+    <h1>{{ i18n!(self.i18n.catalog, "Update product details") }}</h1>
+    <p class="lead">{{ i18n!(self.i18n.catalog, "Change relevant information which users see in the store") }}</p>
   </div>
   <br>
 
   <div class="p-5 rounded shadow">
-    <h1>商品信息</h1>
+    <h1>{{ i18n!(self.i18n.catalog, "Product details") }}</h1>
     {% block form_link %}
     <form action="{{ uri!("/store", crate::store::update_prod(self.prod.get_id())) }}" method="post">
     {% endblock form_link %}
     <div class="form-group row">
-      <label for="inputProd" class="col-sm-2 col-form-label">名称</label>
+      <label for="inputProd" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Name") }}</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="inputProd" placeholder="Product name" value="{{ prod.get_prodname() }}" name="prodname">
       </div>
     </div>
     <br>
     <div class="form-group row">
-      <label for="inputCategory" class="col-sm-2 col-form-label">种类</label>
+      <label for="inputCategory" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Category") }}</label>
       <div class="col-sm-4">
         <select class="form-select" aria-label="Default select example" name="category">
 	  {% for category in categories %}
@@ -37,14 +37,14 @@
     <br>
 
     <div class="form-group row">
-      <label for="inputPrice" class="col-sm-2 col-form-label">价格</label>
+      <label for="inputPrice" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Price") }}</label>
       <div class="col-sm-4">
         <input type="number" min="0" class="form-control" id="inputPrice" placeholder="Price" value="{{ prod.get_price() }}" name="price">
       </div>
     </div>
     <br>
     <div class="form-group row">
-      <label for="inputQuantity" class="col-sm-2 col-form-label">数量</label>
+      <label for="inputQuantity" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Quantity") }}</label>
       <div class="col-sm-4">
         <input type="number" min="1" class="form-control" id="inputQuantity" placeholder="Quantity" value="{{ prod.get_quantity() }}" name="quantity">
       </div>
@@ -52,13 +52,13 @@
     <br>
 
     <div class="form-group row">
-      <label for="inputDescription" class="col-sm-2 col-form-label">简介</label>
+      <label for="inputDescription" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "Description") }}</label>
       <div class="col-sm-10">
 	<textarea class="form-control" id="summernote" rows="15" name="description">{{ prod.get_description() }}</textarea>
       </div>
     </div>
     <br>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">更新商品信息</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ i18n!(self.i18n.catalog, "Update") }}</button>
   </form>
   </div>
   <br>
