--- a/sails-bin/templates/user/portal_guest.html
+++ b/sails-bin/templates/user/portal_guest.html
@@ -14,31 +14,31 @@
 	}
 </style>
 {% endblock head %}
-{% block title %}{{user.get_name()}} 的主页{% endblock title %}
-{% block navbutton %}<li class="nav-item"><a href="/user/logout" class="btn btn-warning" role="button"><i class="bi bi-box-arrow-left"></i> 登出</a></li>{% endblock navbutton %}
+{% block title %}{{ i18n!(self.i18n.catalog, "{0}'s portal page"; self.user.get_name()) }}{% endblock title %}
+{% block navbutton %}<li class="nav-item"><a href="/user/logout" class="btn btn-warning" role="button"><i class="bi bi-box-arrow-left"></i> {{ i18n!(self.i18n.catalog, "Log out") }}</a></li>{% endblock navbutton %}
 
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>欢迎来到 {{ user.get_name() }} 的主页</h1>
-    <p class="lead">{% block intro %}你可以在这里查看 {{ user.get_name() }} 的信息。{% endblock intro %}</p>
+    <h1>{{ i18n!(self.i18n.catalog, "Welcome to {0}'s portal page"; self.user.get_name()) }}</h1>
+    <p class="lead">{% block intro %}{{ i18n!(self.i18n.catalog, "Here details {0}'s information"; self.user.get_name()) }}{% endblock intro %}</p>
   </div>
   <br>
 
   <div class="p-5 rounded shadow">
-    <h1>基本信息</h1>
+    <h1>{{ i18n!(self.i18n.catalog, "Basic information") }}</h1>
     <table class="table table-hover">
       <tbody>
 	<tr>
-	  <th scope="row">邮件</th>
+	  <th scope="row">{{ i18n!(self.i18n.catalog, "Email") }}</th>
 	  <td><a href="mailto:{{user.get_id()}}">{{ user.get_id() }}</a></td>
 	</tr>
 	<tr>
-	  <th scope="row">姓名</th>
+	  <th scope="row">{{ i18n!(self.i18n.catalog, "Name") }}</th>
 	  <td>{{ user.get_name() }}</td>
 	</tr>
 	<tr>
-	  <th scope="row">学校</th>
+	  <th scope="row">{{ i18n!(self.i18n.catalog, "Institution") }}</th>
 	  <td>{{ user.get_school() }}</td>
 	</tr>
       </tbody>
@@ -52,21 +52,21 @@
     {% when Some with (desc) %}
     {{desc|safe}}
     {% when None %}
-    <h3>没有简介</h3>
+    <h3>{{ i18n!(self.i18n.catalog, "No description") }}</h3>
     {% endmatch %}
   </div>
   <br>
 
   <div class="shadow p-5 rounded html-body">
   {% if prods_owned.len() > 0 %}
-  <h3>此用户上架的内容</h3>
+  <h3>{{ i18n!(self.i18n.catalog, "Products created") }}</h3>
   {% let prods = prods_owned.iter() %}
   <table class="table" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
       <tr>
-	<th data-field="id" data-sortable="true" scope="col">ID</th>
-	<th data-field="name" data-sortable="true" scope="col">Prod name</th>
-	<th data-field="price" data-sortable="true" scope="col">Price</th>
+	<th data-field="id" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "ID") }}</th>
+	<th data-field="name" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "Name") }}</th>
+	<th data-field="price" data-sortable="true" scope="col">{{ i18n!(self.i18n.catalog, "Price") }}</th>
       </tr>
     </thead>
     <tbody>
@@ -80,7 +80,7 @@
     </tbody>
   </table>
   {% else %}
-  <h3>此用户没有上架商品</h3>
+  <h3>{{ i18n!(self.i18n.catalog, "No product created") }}</h3>
   {% block postprod_button %}{% endblock postprod_button %}
   {% endif %}
   </div>
