--- a/sails-bin/templates/user/signin.html
+++ b/sails-bin/templates/user/signin.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}登录{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Sign in") }}{% endblock title %}
 {% block head %}
     {% call super() %}
     <!-- Custom styles for sign in page -->
@@ -9,19 +9,19 @@
 {% block body %}
 <main class="form-signin text-center">
   <form action="validate" method="post">
-    <h1 class="h3 mb-3 fw-normal">登录账号</h1>
+    <h1 class="h3 mb-3 fw-normal">{{ i18n!(self.i18n.catalog, "Sign in") }}</h1>
 
     <div class="form-floating">
       <input type="email" class="form-control" id="floatingEmail" placeholder="Email" name="email">
-      <label for="floatingInput">邮箱</label>
+      <label for="floatingInput">{{ i18n!(self.i18n.catalog, "Email") }}</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-      <label for="floatingPassword">密码</label>
+      <label for="floatingPassword">{{ i18n!(self.i18n.catalog, "Password") }}</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-box-arrow-in-right"></i> 登录</button>
-    <a href="/user/signup">注册</a><br>
-    <a href="/user/reset_passwd">重置密码</a>
+    <button class="w-100 btn btn-lg btn-primary" type="submit"><i class="bi bi-box-arrow-in-right"></i> {{ i18n!(self.i18n.catalog, "Sign in") }}</button>
+    <a href="/user/signup">{{ i18n!(self.i18n.catalog, "Sign up") }}</a><br>
+    <a href="/user/reset_passwd">{{ i18n!(self.i18n.catalog, "Reset password") }}</a>
   </form>
 </main>
 {% endblock body %}
