--- a/sails-bin/templates/user/signup_instruction.html
+++ b/sails-bin/templates/user/signup_instruction.html
@@ -9,7 +9,7 @@
 	<br>
 	{{ i18n!(self.i18n.catalog, "Please check your inbox or junk folder to see the confirmation. Click the link in the middle to complete verification.") }}
 	<br>
-	{{ i18n!(self.i18n.catalog, "If you haven't received any confirmation email from us, please <a href=\"mailto:admin@flibrary.info\">reach us</a> for help.") }}
+	{{ i18n!(self.i18n.catalog, "If you haven't received any confirmation email from us, please <a href=\"mailto:admin@flibrary.info\">reach us</a> for help.")|safe }}
       </p>
     </div>
     <br>
