--- a/sails-bin/templates/user/reset_passwd_confirmation.html
+++ b/sails-bin/templates/user/reset_passwd_confirmation.html
@@ -5,7 +5,7 @@
     <div class="p-5 rounded shadow">
       <h1>{{ i18n!(self.i18n.catalog, "Your password has been reset") }}</h1>
       <p class="lead">
-      {{ i18n!(self.i18n.catalog, "Your new password is <code>{0}</code>"; self.reset_passwd.clone()) }}
+      {{ i18n!(self.i18n.catalog, "Your new password is <code>{0}</code>"; self.reset_passwd.clone())|safe }}
       <br>
       {{ i18n!(self.i18n.catalog, "Please sign in using the new password above and remember to change your password soon.") }}
     </p>
